chore: change template schema to category schema
